<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/linearLayout">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <com.pkmmte.view.CircularImageView
            android:id="@+id/imageView"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:contentDescription="@string/profile_avatar"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/loading"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/options_layout"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/direction"
                android:layout_width="41dp"
                android:layout_height="39dp"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/navigation"
                android:contentDescription="@string/direction"/>

            <ImageButton
                android:id="@+id/phone"
                android:layout_width="41dp"
                android:background="#00FFFFFF"
                android:layout_height="39dp"
                app:srcCompat="@drawable/phone"
                android:contentDescription="@string/phone"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/accept_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#00FFFFFF"
            android:layout_weight="1"
            app:srcCompat="@drawable/follow_back" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <View
            android:layout_width="95dp"
            android:layout_height="2dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#499FCA" />
    </LinearLayout>
</LinearLayout>
